force-app/main/default/objects/Assignment_Configuration__c/Assignment_Configuration__c.object-meta.xml
<CustomObject>
    <description>It has scheduler configurations like last scheduled time, next schedule time, running status and records assigned stats etc.</description>
    <label>QA Scheduler</label>
    <nameField>
        <label>Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>