force-app/main/default/objects/Assignment_Configuration__c/fields/Assignment_Method__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Method__c</fullName>
    <description>Assignment method (No Longer Used)</description>
    <label>Assignment Method (No Longer Used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIFO / Ascending</fullName>
                <default>true</default>
                <label>FIFO / Ascending</label>
            </value>
            <value>
                <fullName>LIFO / Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>