force-app/main/default/objects/Assignment_Configuration__c/fields/Assignment_Method_Basis__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Method_Basis__c</fullName>
    <description>Assignment method basis  (No Longer Used)</description>
    <label>Assignment Method Basis (No Longer Used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created Date</fullName>
            </value>
            <value>
                <fullName>Last Modified Date</fullName>
            </value>
            <value>
                <fullName>Custom Sequence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>