force-app/main/default/objects/Assignment_Configuration__c/fields/Assignment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Mode__c</fullName>
    <description>Assignment mode (No Longer Used)</description>
    <label>Assignment Mode  (No Longer Used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Round Robin</fullName>
            </value>
            <value>
                <fullName>Load Balanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>