force-app/main/default/objects/Assignment_Configuration__c/fields/Assignment_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Sequence__c</fullName>
    <description>Assignment sequence number (No Longer Used)</description>
    <label>Assignment Sequence  (No Longer Used)</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>