force-app/main/default/objects/Assignment_Configuration__c/fields/Assumed_Queries_Used_Per_Commit__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Queries_Used_Per_Commit__c</fullName>
    <description>(No Longer Used)</description>
    <inlineHelpText>(No Longer Used)</inlineHelpText>
    <label>Assumed Queries Per (No Longer Used)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>