force-app/main/default/objects/Assignment_Configuration__c/fields/Current_Job_Completed_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_Completed_Time__c</fullName>
    <label>Current Job Completed Time</label>
    <type>DateTime</type>
</CustomField>