force-app/main/default/objects/Assignment_Configuration__c/fields/Current_Job_Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_Completion_Status__c</fullName>
    <label>Current Job Completion Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>