force-app/main/default/objects/Assignment_Configuration__c/fields/Current_Job_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_Error_Message__c</fullName>
    <label>Current Job Error Message</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>