force-app/main/default/objects/Assignment_Configuration__c/fields/Current_Job_Number_of_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Current_Job_Number_of_Records_Processed__c</fullName>
    <label>Current Job Number of Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>