force-app/main/default/objects/Assignment_Configuration__c/fields/Error_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Address__c</fullName>
    <label>Error Email Address</label>
    <type>Email</type>
</CustomField>