force-app/main/default/objects/Assignment_Configuration__c/fields/Fallback_Job_One__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Job_One__c</fullName>
    <description>Fallback_Job1_Id (No Longer Used)</description>
    <label>Fallback Job One (No Longer Used)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>