force-app/main/default/objects/Assignment_Configuration__c/fields/Fallback_Job_Two__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Job_Two__c</fullName>
    <description>Fallback_Job2_Id (No Longer Used)</description>
    <label>Fallback Job Two (No Longer Used)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>