force-app/main/default/objects/Assignment_Configuration__c/fields/Job_Consecutive_Fatal_Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Job_Consecutive_Fatal_Failure_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The number of consecutive scheduler jobs that have not completed due to a fatal failure, e.g. hitting Salesforce governor limits. Incremented for each failed job. Reset back to zero by each job that runs and exits without fatal failure</inlineHelpText>
    <label>Job Consecutive Fatal Failure Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>