force-app/main/default/objects/Assignment_Configuration__c/fields/Job_Consecutive_Fatal_Failure_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Job_Consecutive_Fatal_Failure_Threshold__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Used to determine how many consecutive jobs that experience a fatal failure will trigger going into Safe Mode or will trigger to reduce Max Records Per Job within Safe Mode to the next lower value</inlineHelpText>
    <label>Job Consecutive Fatal Failure Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>