force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Completed_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Job_Id__c</fullName>
    <description>Last completed job id</description>
    <label>Last Completed Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>