force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Exit_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Exit_Status__c</fullName>
    <label>Last Exit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Early</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>