force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Job_Completed_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Completed_Time__c</fullName>
    <label>Last Job Completed Time</label>
    <type>DateTime</type>
</CustomField>