force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Job_Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Completion_Status__c</fullName>
    <label>Last Job Completion Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>