force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Job_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Error_Message__c</fullName>
    <label>Last Job Error Message</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>