force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Job_Ran_in_Safe_Mode__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Ran_in_Safe_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Job Ran in Safe Mode</label>
    <type>Checkbox</type>
</CustomField>