force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Job_Scheduled_time__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Scheduled_time__c</fullName>
    <label>Last Job Scheduled time</label>
    <type>DateTime</type>
</CustomField>