force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Normal_Assignment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Normal_Assignment_Start_Date__c</fullName>
    <label>Last Normal Assignment Start Date</label>
    <type>DateTime</type>
</CustomField>