force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Processed_Groups__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Groups__c</fullName>
    <label>Last Processed Groups</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>