force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Run_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_End_Time__c</fullName>
    <label>Last Run End Time</label>
    <type>DateTime</type>
</CustomField>