force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Scheduled_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled_Assignment_Date__c</fullName>
    <description>Last scheduled assignment date</description>
    <label>Last Scheduled Assignment Date</label>
    <type>DateTime</type>
</CustomField>