force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Scheduled_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled_Job_Id__c</fullName>
    <description>Last scheduled job id</description>
    <label>Last Scheduled Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>