force-app/main/default/objects/Assignment_Configuration__c/fields/Last_Scheduler_Run_Stats__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduler_Run_Stats__c</fullName>
    <label>Last Scheduler Run Stats</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>