force-app/main/default/objects/Assignment_Configuration__c/fields/Max_External_Object_DMLs_Per_Job__c.field-meta.xml
<CustomField>
    <fullName>Max_External_Object_DMLs_Per_Job__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Max External Object DMLs Per Job</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>