force-app/main/default/objects/Assignment_Configuration__c/fields/Max_Records_Per_Commit__c.field-meta.xml
<CustomField>
    <fullName>Max_Records_Per_Commit__c</fullName>
    <inlineHelpText>The max number of records (Leads, Cases, etc.) to commit in one batch. A higher number lead to higher performance but may hit governor limits, e.g. triggers runs extra queries. A lower number can prevent hitting governor limits but will process slowly.</inlineHelpText>
    <label>Max Records Per Commit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>