force-app/main/default/objects/Assignment_Configuration__c/fields/Max_Records_Per_Job__c.field-meta.xml
<CustomField>
    <fullName>Max_Records_Per_Job__c</fullName>
    <defaultValue>75</defaultValue>
    <label>Max Records Per Job</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>