force-app/main/default/objects/Assignment_Configuration__c/fields/Next_Job_Number_of_Records_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Next_Job_Number_of_Records_to_Process__c</fullName>
    <label>Next Job Number of Records to Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>