force-app/main/default/objects/Assignment_Configuration__c/fields/Next_Job_Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Job_Scheduled_Time__c</fullName>
    <formula>IF(Enabled__c, Current_Job_Scheduled_Time__c  +  (Schedule_Frequency_Minutes__c/1440), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Job Scheduled Time</label>
    <type>DateTime</type>
</CustomField>