force-app/main/default/objects/Assignment_Configuration__c/fields/Round_Robin_Quota_Period__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Quota_Period__c</fullName>
    <description>Round robin quota period (No Longer Used)</description>
    <label>Round Robin Quota Period (No Longer Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>