force-app/main/default/objects/Assignment_Configuration__c/fields/Schedule_Frequency_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Frequency_Minutes__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Assignment schedule frequency in minutes</description>
    <label>Schedule Frequency Minutes</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>