force-app/main/default/objects/Assignment_Configuration__c/fields/Scheduler_Number__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Number__c</fullName>
    <description>Scheduler Number field will store a unique integer for each Scheduler, so that easily referred to in a unique way (e.g. added in Job name) and prevents accidental duplication of Scheduler records by enforcing a Unique constraint. It allows a customer to change the Name of a Scheduler while still retaining the same unique Scheduler Number.</description>
    <externalId>true</externalId>
    <label>Scheduler Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>