force-app/main/default/objects/Assignment_Configuration__c/fields/SM_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SM_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SM Enabled</label>
    <type>Checkbox</type>
</CustomField>