force-app/main/default/objects/Assignment_Configuration__c/fields/SM_Highest_Num_Records_Per_Job_Success__c.field-meta.xml
<CustomField>
    <fullName>SM_Highest_Num_Records_Per_Job_Success__c</fullName>
    <label>SM Highest Num Records Per Job Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>