force-app/main/default/objects/Assignment_Configuration__c/fields/SM_Lowest_Num_Records_Per_Job_Failed__c.field-meta.xml
<CustomField>
    <fullName>SM_Lowest_Num_Records_Per_Job_Failed__c</fullName>
    <label>SM Lowest Num Records Per Job Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>